--- a/src/main/webapp/css/blue.css
+++ b/src/main/webapp/css/blue.css
@@ -2,14 +2,13 @@
 
 body
 {
-    background: #0ac5f4;
     margin:0;
-    padding:0 0 0 250px;
     min-width: 750px;
     -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
     -moz-box-sizing: border-box;    /* Firefox, other Gecko */
     box-sizing: border-box;         /* Opera/IE 8+ */
     font-family: "PT Sans Narrow";
+    background: #fffbfb;
 
 }
 body,html
@@ -19,6 +18,8 @@ body,html
         #container
         {
             height:100%;
+            padding:0 0 0 250px;
+
             padding-left: 300px;
         }
         #logincontainer
@@ -30,11 +31,35 @@ body,html
             width: 300px; /*Width of frame div*/
             height: 100%;
             overflow: hidden; /*Disable scrollbars. Set to "scroll" to enable*/
-            background: #fffbfb;
-            color: #0ac5f4;
+
 
 
         }
+        .light
+        {
+            background: #fffbfb;
+            color: #0ac5f4;
+
+        }
+        .light a:link, .light a:visited
+        {
+            color: #0ac5f4;
+            border-bottom: 1px dashed #0ac5f4;
+        }
+        .dark
+        {
+            color:  #fffbfb;
+            background: #0ac5f4;
+        }
+        a:link, a:visited
+        {
+            text-decoration: none;
+        }
+.dark a:link, .dark a:visited
+{
+    color: white;
+    border-bottom: 1px dashed white;
+}
         #maincontainer
         {
             position: fixed;
@@ -74,6 +99,15 @@ body,html
             font-family: "PT Sans Narrow";
 
         }
+        #topmenu
+        {
+            height: 75px;
+        }
+        #wrapper
+        {
+            width: 100%;
+            height: 100%;
+        }
 ::-webkit-input-placeholder { /* WebKit browsers */
     color:    #fff;
 }
@@ -87,9 +121,8 @@ body,html
     color:    #fff;
 }
 .column{
-/*Margins for inner DIV inside each DIV (to provide padding)*/
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    -webkit-box-sizing: border-box; /
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
     padding: 15px;
 
@@ -98,6 +131,22 @@ body,html
 {
     font-size: 12px;
 }
+
+#content
+{
+    width: 1100px;
+    margin: 0 auto  0 auto;
+}
+form.mainstyle input, form.mainstyle textarea
+{
+    width: 400px;
+    padding: 3px;
+   border: 1px solid #0ac5f4;
+             color: #0ac5f4;
+    font-family: "PT Sans Narrow";
+
+}
+
 .button
 {
     border:0;
@@ -108,6 +157,32 @@ body,html
 
     background: #066178;
     font-size: 16px;
-    color: white;
+    border: none !important;
+    color: white !important;
+    margin-left:0px;
     font-family: "PT Sans Narrow";
 }
+
+            .row
+            {
+                 height: 60px;
+                padding: 10px;
+                -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+                -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+                box-sizing: border-box;
+                                   border-bottom: 1px solid #0ac5f4;
+
+
+            }
+            .row:last-child
+            {
+                border: 0;
+            }
+                    .row span{
+                        width:300px;
+                        display: block;
+                        float: left;
+                    }
+            .row input,.row textarea, .row select{
+                float: left;
+            }
