--- a/src/main/webapp/css/blue.css
+++ b/src/main/webapp/css/blue.css
@@ -32,8 +32,6 @@ body,html
             height: 100%;
             overflow: hidden; /*Disable scrollbars. Set to "scroll" to enable*/
 
-
-
         }
         .light
         {
@@ -85,20 +83,7 @@ body,html
             font-size:49px;
             font-weight: 400;
         }
-        input.loginbox
-        {
-            border:0;
-            padding:3px;
-            -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-            -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-            box-sizing: border-box;         /* Opera/IE 8+ */
-            width: 100%;
-            background: #0ac5f4;
-            font-size: 16px;
-            color: white;
-            font-family: "PT Sans Narrow";
 
-        }
         #topmenu
         {
             height: 75px;
@@ -112,18 +97,7 @@ body,html
             width: 100%;
             height: 100%;
         }
-::-webkit-input-placeholder { /* WebKit browsers */
-    color:    #fff;
-}
-:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-    color:    #fff;
-}
-::-moz-placeholder { /* Mozilla Firefox 19+ */
-    color:    #fff;
-}
-:-ms-input-placeholder { /* Internet Explorer 10+ */
-    color:    #fff;
-}
+
 .column{
     -webkit-box-sizing: border-box; /
     -moz-box-sizing: border-box;
@@ -140,6 +114,33 @@ body,html
 {
     width: 1100px;
     margin: 20px auto  0 auto;
+}
+/* FORM STYLING */
+::-webkit-input-placeholder { /* WebKit browsers */
+    color:    #fff;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    color:    #fff;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+    color:    #fff;
+}
+:-ms-input-placeholder { /* Internet Explorer 10+ */
+    color:    #fff;
+}
+input.loginbox
+{
+    border:0;
+    padding:3px;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
+    width: 100%;
+    background: #0ac5f4;
+    font-size: 16px;
+    color: white;
+    font-family: "PT Sans Narrow";
+
 }
 form.mainstyle input, form.mainstyle textarea
 {
@@ -200,7 +201,39 @@ form.mainstyle input, form.mainstyle textarea
     text-align:left;
     font-size:12px;
 
-    /* outline radius for mozilla/firefox only */
+
     -moz-box-shadow:0 0 10px #000;
     -webkit-box-shadow:0 0 10px #000;
+}
+/* MENU STYLING */
+.centermenu
+{
+    margin: 0 auto 0 auto;
+    width: 1100px;
+
+}
+#topmenu ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+
+}
+#topmenu a:link, #topmenu a:visited
+{
+    border-bottom: none;
+}
+#topmenu ul li
+{
+    float: left;
+    font-size: 20px;
+    padding: 10px 35px 10px 35px;
+    border-right: 1px solid white;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;
+}
+#topmenu ul li a.active
+{
+   border-bottom: 1px solid white;
 }
