--- a/src/main/webapp/css/blue.css
+++ b/src/main/webapp/css/blue.css
@@ -141,6 +141,20 @@ section
     padding: 15px;
     float: left;
 }
+.full
+{
+    width: 100%;
+}
+.gmap
+{
+    width: 100%;
+    height: 200px;
+    background: #c8eefd;
+    -webkit-box-shadow:  0px 0px 10px 0px #666;
+
+    box-shadow:  0px 0px 10px 0px #666;
+
+}
 .three-quarter
 {
     width: 75%;
@@ -160,6 +174,20 @@ section
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     width: 100%;
+}
+.tripnumber
+{
+    margin:0;
+    padding: 0;
+    -webkit-border-radius: 12px;
+    border-radius: 12px;
+    text-align: center;
+    width: 24px !important;
+    height:24px !important;
+    margin-right: 20px;
+    color:   #0ac5f4;
+    border:  2px solid  #0ac5f4;
+    font-size:  18px;
 }
 .two-third
 {
