--- a/src/main/webapp/css/blue.css
+++ b/src/main/webapp/css/blue.css
@@ -1,5 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400|PT+Sans+Narrow:400,700);
-
+     @import url(http://jquerytools.org/media/css/dateinput/skin1.css);
 body
 {
     margin:0;
