--- a/src/main/webapp/css/blue.css
+++ b/src/main/webapp/css/blue.css
@@ -148,7 +148,7 @@ section
 .gmap
 {
     width: 100%;
-    height: 200px;
+    height: 100%;
     background: #c8eefd;
     -webkit-box-shadow:  0px 0px 10px 0px #666;
 
@@ -345,3 +345,8 @@ form.mainstyle input[type="checkbox"]
 {
    border-bottom: 1px solid white;
 }
+
+.big{
+    height: 350px;
+}
+
