--- a/Trippie App/res/layout/main.xml
+++ b/Trippie App/res/layout/main.xml
@@ -13,12 +13,12 @@
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/editText" android:layout_gravity="center" android:width="300dp" android:singleLine="true"
+            android:id="@+id/username" android:layout_gravity="center" android:width="300dp" android:singleLine="true"
             android:typeface="sans" android:autoText="false"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/editText1" android:layout_gravity="center" android:width="300dp" android:password="true"
+            android:id="@+id/password" android:layout_gravity="center" android:width="300dp" android:password="true"
             android:singleLine="true"/>
     <Button
             android:layout_width="wrap_content"
