--- a/src/main/webapp/css/blue.css
+++ b/src/main/webapp/css/blue.css
@@ -424,4 +424,17 @@ form.mainstyle input[type="checkbox"] {
 
     color: white;
 }
+#fblogin
+{
+    display: inline;
+    width: 100px;
+    padding: 3px;
+    color:  white;
+    border: 2px solid #1799b9;
+    text-align: center;
+    cursor: hand;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+background: #0ac5f4;;
+}
 
