--- a/src/main/webapp/css/blue.css
+++ b/src/main/webapp/css/blue.css
@@ -437,3 +437,134 @@ form.mainstyle input[type="checkbox"] {
     -moz-box-sizing: border-box;
 background: #0ac5f4;
 }
+
+
+
+#loader
+{
+    background: rgba(0,0,0,0.9);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left:0;
+    color: white;
+    display: none;
+
+}
+#bowlG{
+    position:absolute;
+    width:128px;
+    height:128px;
+    top:    50%;
+    left: 50%;
+    margin-top: -64px;
+    margin-left: -64px;
+}
+#bowlG     p
+{
+    text-align: center;
+    font-size: 36px;
+    margin: 160px 0 0 30px;
+}
+
+#bowl_ringG{
+    position:absolute;
+    width:128px;
+    height:128px;
+
+    border:11px solid #FFFFFF;
+    -moz-border-radius:128px;
+    -webkit-border-radius:128px;
+    -ms-border-radius:128px;
+    -o-border-radius:128px;
+    border-radius:128px;
+}
+
+.ball_holderG{
+    position:absolute;
+    width:34px;
+    height:128px;
+    left:47px;
+    top:0px;
+    -moz-animation-name:ball_moveG;
+    -moz-animation-duration:2s;
+    -moz-animation-iteration-count:infinite;
+    -moz-animation-timing-function:linear;
+    -webkit-animation-name:ball_moveG;
+    -webkit-animation-duration:2s;
+    -webkit-animation-iteration-count:infinite;
+    -webkit-animation-timing-function:linear;
+    -ms-animation-name:ball_moveG;
+    -ms-animation-duration:2s;
+    -ms-animation-iteration-count:infinite;
+    -ms-animation-timing-function:linear;
+    -o-animation-name:ball_moveG;
+    -o-animation-duration:2s;
+    -o-animation-iteration-count:infinite;
+    -o-animation-timing-function:linear;
+    animation-name:ball_moveG;
+    animation-duration:2s;
+    animation-iteration-count:infinite;
+    animation-timing-function:linear;
+}
+
+.ballG{
+    position:absolute;
+    left:0px;
+    top:-30px;
+    width:51px;
+    height:51px;
+    background:#0EBFF5;
+    -moz-border-radius:43px;
+    -webkit-border-radius:43px;
+    -ms-border-radius:43px;
+    -o-border-radius:43px;
+    border-radius:43px;
+}
+
+@-moz-keyframes ball_moveG{
+    0%{
+        -moz-transform:rotate(0deg)}
+
+    100%{
+        -moz-transform:rotate(360deg)}
+
+}
+
+@-webkit-keyframes ball_moveG{
+    0%{
+        -webkit-transform:rotate(0deg)}
+
+    100%{
+        -webkit-transform:rotate(360deg)}
+
+}
+
+@-ms-keyframes ball_moveG{
+    0%{
+        -ms-transform:rotate(0deg)}
+
+    100%{
+        -ms-transform:rotate(360deg)}
+
+}
+
+@-o-keyframes ball_moveG{
+    0%{
+        -o-transform:rotate(0deg)}
+
+    100%{
+        -o-transform:rotate(360deg)}
+
+}
+
+@keyframes ball_moveG{
+    0%{
+        transform:rotate(0deg)}
+
+    100%{
+        transform:rotate(360deg)}
+
+}
+
