--- a/TrippieApp/res/layout/usertrips.xml
+++ b/TrippieApp/res/layout/usertrips.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="#0ac5f4">
+              android:background="#0ac5f4"
+              android:paddingLeft="10px"
+              android:paddingRight="10px">
     <ListView
             android:id="@+id/tripList"
             android:layout_width="match_parent"
