--- a/src/main/webapp/css/blue.css
+++ b/src/main/webapp/css/blue.css
@@ -150,11 +150,16 @@ section {
     }
 .fill
 {
-    background: #1799b9;
+    background: #fff;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    color: white;
+    color: #333;
     padding: 5px;
+    -webkit-box-shadow:  0px 0px 5px 0px #ccc;
+    -webkit-border-radius: 10px;
+
+    border-radius: 10px;
+    box-shadow:  0px 0px 5px 0px #ccc;
 }
 .quarter {
     width: 23%;
@@ -249,6 +254,22 @@ section {
     box-sizing: border-box;
     margin: 5px;
     float: left;
+}
+
+.quarter section, .third section,.three-quarter section, .two-third section, .half  section
+{
+    margin-bottom: 10px;
+    border: 1px solid #eee;
+    -webkit-box-shadow:  0px 0px 5px 0px #ccc;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-shadow:  0px 0px 5px 0px #ccc;
+    padding: 5px;
+    background: #fff;
+    color: #333;
+    -webkit-border-radius: 10px;
+
+    border-radius: 10px;
 }
 
 .small {
