--- a/src/main/webapp/css/blue.css
+++ b/src/main/webapp/css/blue.css
@@ -99,10 +99,10 @@ h3
 h4
 {
     margin:0px;
-    background: #0e5a6d;
+    background: rgb(208, 237, 245);
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    color: white;
+    color: #333;
     padding: 3px;
     text-transform: uppercase;
     font-weight: 300;
