--- a/src/main/webapp/css/blue.css
+++ b/src/main/webapp/css/blue.css
@@ -83,22 +83,21 @@ h2 {
     font-size: 49px;
     font-weight: 400;
 }
-h3
-{
+
+h3 {
     font-size: 35px;
     background: #0e5a6d;
-    padding: 4Px;
+    padding: 4 Px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    color:  white;
-    margin:0;
+    color: white;
+    margin: 0;
     font-weight: normal;
     margin-bottom: 2px;
 }
 
-h4
-{
-    margin:0px;
+h4 {
+    margin: 0px;
     background: rgb(208, 237, 245);
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -107,11 +106,13 @@ h4
     text-transform: uppercase;
     font-weight: 300;
 
-width: 100%:
+    width: 100% :
 }
-section p{
+
+section p {
     padding: 4px;
 }
+
 #topmenu {
     height: 75px;
 
@@ -140,27 +141,28 @@ section p{
 section {
     width: 100%;
 }
-    .block
-    {
 
-           margin: 2px;
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        padding: 5px;
-    }
-.fill
-{
+.block {
+
+    margin: 2px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    padding: 5px;
+}
+
+.fill {
     background: #fff;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     color: #333;
     padding: 5px;
-    -webkit-box-shadow:  0px 0px 5px 0px #ccc;
+    -webkit-box-shadow: 0px 0px 5px 0px #ccc;
     -webkit-border-radius: 10px;
 
     border-radius: 10px;
-    box-shadow:  0px 0px 5px 0px #ccc;
+    box-shadow: 0px 0px 5px 0px #ccc;
 }
+
 .quarter {
     width: 23%;
     -webkit-box-sizing: border-box;
@@ -256,14 +258,13 @@ section {
     float: left;
 }
 
-.quarter section, .third section,.three-quarter section, .two-third section, .half  section, .full section
-{
+.quarter section, .third section, .three-quarter section, .two-third section, .half  section, .full section {
     margin-bottom: 10px;
     border: 1px solid #eee;
-    -webkit-box-shadow:  0px 0px 5px 0px #ccc;
+    -webkit-box-shadow: 0px 0px 5px 0px #ccc;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    box-shadow:  0px 0px 5px 0px #ccc;
+    box-shadow: 0px 0px 5px 0px #ccc;
     padding: 5px;
     background: #fff;
     color: #333;
@@ -335,7 +336,7 @@ form.mainstyle input[type="checkbox"] {
     -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
     -moz-box-sizing: border-box; /* Firefox, other Gecko */
     box-sizing: border-box; /* Opera/IE 8+ */
-           display: inline-block;
+    display: inline-block;
     background: #066178;
     font-size: 16px;
     color: white !important;
@@ -419,173 +420,192 @@ form.mainstyle input[type="checkbox"] {
     height: 350px;
 }
 
-.sortable
-{
+.sortable {
     list-style: none;
-    margin:0;
+    margin: 0;
     padding: 0;
     width: 100%;
 
 }
-.sortable li{
+
+.sortable li {
     width: 100%;
     padding: 3px;
     margin: 0;
-    background:#0ac5f4;
+    background: #0ac5f4;
     color: white;
     margin-top: 1px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
 
-
 }
-.sortable li a:link, .sortable li a:visited
-{
+
+.sortable li a:link, .sortable li a:visited {
     text-decoration: none;
     border: none;
 
     color: white;
 }
-.button2
-{
+
+.button2 {
     display: inline-block;
     padding: 3px;
-    color:  white;
+    color: white;
     border: 2px solid #1799b9;
     text-align: center;
     cursor: hand;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-background: #0ac5f4;
+    background: #0ac5f4;
 }
 
+.fp_navigation {
+    display: inline-block;
+    padding: 3px;
+    color: white;
+    border: 2px solid #1799b9;
+    text-align: center;
+    cursor: hand;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    background: #0ac5f4;
+}
 
-
-#loader
-{
-    background: rgba(0,0,0,0.9);
+#loader {
+    background: rgba(0, 0, 0, 0.9);
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
-    left:0;
+    left: 0;
     color: white;
     display: none;
 
 }
-#bowlG{
-    position:absolute;
-    width:128px;
-    height:128px;
-    top:    50%;
+
+#bowlG {
+    position: absolute;
+    width: 128px;
+    height: 128px;
+    top: 50%;
     left: 50%;
     margin-top: -64px;
     margin-left: -64px;
 }
-#bowlG     p
-{
+
+#bowlG     p {
     text-align: center;
     font-size: 36px;
     margin: 160px 0 0 30px;
 }
 
-#bowl_ringG{
-    position:absolute;
-    width:128px;
-    height:128px;
+#bowl_ringG {
+    position: absolute;
+    width: 128px;
+    height: 128px;
 
-    border:11px solid #FFFFFF;
-    -moz-border-radius:128px;
-    -webkit-border-radius:128px;
-    -ms-border-radius:128px;
-    -o-border-radius:128px;
-    border-radius:128px;
+    border: 11px solid #FFFFFF;
+    -moz-border-radius: 128px;
+    -webkit-border-radius: 128px;
+    -ms-border-radius: 128px;
+    -o-border-radius: 128px;
+    border-radius: 128px;
 }
 
-.ball_holderG{
-    position:absolute;
-    width:34px;
-    height:128px;
-    left:47px;
-    top:0px;
-    -moz-animation-name:ball_moveG;
-    -moz-animation-duration:2s;
-    -moz-animation-iteration-count:infinite;
-    -moz-animation-timing-function:linear;
-    -webkit-animation-name:ball_moveG;
-    -webkit-animation-duration:2s;
-    -webkit-animation-iteration-count:infinite;
-    -webkit-animation-timing-function:linear;
-    -ms-animation-name:ball_moveG;
-    -ms-animation-duration:2s;
-    -ms-animation-iteration-count:infinite;
-    -ms-animation-timing-function:linear;
-    -o-animation-name:ball_moveG;
-    -o-animation-duration:2s;
-    -o-animation-iteration-count:infinite;
-    -o-animation-timing-function:linear;
-    animation-name:ball_moveG;
-    animation-duration:2s;
-    animation-iteration-count:infinite;
-    animation-timing-function:linear;
+.ball_holderG {
+    position: absolute;
+    width: 34px;
+    height: 128px;
+    left: 47px;
+    top: 0px;
+    -moz-animation-name: ball_moveG;
+    -moz-animation-duration: 2s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+    -webkit-animation-name: ball_moveG;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -ms-animation-name: ball_moveG;
+    -ms-animation-duration: 2s;
+    -ms-animation-iteration-count: infinite;
+    -ms-animation-timing-function: linear;
+    -o-animation-name: ball_moveG;
+    -o-animation-duration: 2s;
+    -o-animation-iteration-count: infinite;
+    -o-animation-timing-function: linear;
+    animation-name: ball_moveG;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
 
-.ballG{
-    position:absolute;
-    left:0px;
-    top:-30px;
-    width:51px;
-    height:51px;
-    background:#0EBFF5;
-    -moz-border-radius:43px;
-    -webkit-border-radius:43px;
-    -ms-border-radius:43px;
-    -o-border-radius:43px;
-    border-radius:43px;
+.ballG {
+    position: absolute;
+    left: 0px;
+    top: -30px;
+    width: 51px;
+    height: 51px;
+    background: #0EBFF5;
+    -moz-border-radius: 43px;
+    -webkit-border-radius: 43px;
+    -ms-border-radius: 43px;
+    -o-border-radius: 43px;
+    border-radius: 43px;
 }
 
-@-moz-keyframes ball_moveG{
-    0%{
-        -moz-transform:rotate(0deg)}
+@-moz-keyframes ball_moveG {
+    0% {
+        -moz-transform: rotate(0deg)
+    }
 
-    100%{
-        -moz-transform:rotate(360deg)}
-
-}
-
-@-webkit-keyframes ball_moveG{
-    0%{
-        -webkit-transform:rotate(0deg)}
-
-    100%{
-        -webkit-transform:rotate(360deg)}
+    100% {
+        -moz-transform: rotate(360deg)
+    }
 
 }
 
-@-ms-keyframes ball_moveG{
-    0%{
-        -ms-transform:rotate(0deg)}
+@-webkit-keyframes ball_moveG {
+    0% {
+        -webkit-transform: rotate(0deg)
+    }
 
-    100%{
-        -ms-transform:rotate(360deg)}
-
-}
-
-@-o-keyframes ball_moveG{
-    0%{
-        -o-transform:rotate(0deg)}
-
-    100%{
-        -o-transform:rotate(360deg)}
+    100% {
+        -webkit-transform: rotate(360deg)
+    }
 
 }
 
-@keyframes ball_moveG{
-    0%{
-        transform:rotate(0deg)}
+@-ms-keyframes ball_moveG {
+    0% {
+        -ms-transform: rotate(0deg)
+    }
 
-    100%{
-        transform:rotate(360deg)}
+    100% {
+        -ms-transform: rotate(360deg)
+    }
+
+}
+
+@-o-keyframes ball_moveG {
+    0% {
+        -o-transform: rotate(0deg)
+    }
+
+    100% {
+        -o-transform: rotate(360deg)
+    }
+
+}
+
+@keyframes ball_moveG {
+    0% {
+        transform: rotate(0deg)
+    }
+
+    100% {
+        transform: rotate(360deg)
+    }
 
 }
 
