--- a/src/main/webapp/css/blue.css
+++ b/src/main/webapp/css/blue.css
@@ -87,7 +87,7 @@ h2 {
 h3 {
     font-size: 35px;
     background: #0e5a6d;
-    padding: 4 Px;
+    padding: 4px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     color: white;
