--- a/TrippieApp/res/values/style.xml
+++ b/TrippieApp/res/values/style.xml
@@ -5,6 +5,10 @@
     </style>
 
     <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
-        <item name="android:background">#949494</item>
+        <item name="android:background">#FFFFFF</item>
+    </style>
+    <style name="BoxedText">
+        <item name="android:color">#0ac5f4</item>
+        <item name="android:typeface">sans</item>
     </style>
 </resources>
