--- a/TrippieApp/res/layout/chat.xml
+++ b/TrippieApp/res/layout/chat.xml
@@ -15,14 +15,16 @@
             android:layout_alignParentRight="true"
             android:layout_above="@+id/chatBar"
             android:background="#dee9ec"
-            android:layout_alignParentTop="false"
-            android:layout_marginTop="72dp"/>
+            android:layout_alignParentTop="true"
+            android:gravity="top"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            android:layout_marginTop="10dp"/>
 
     <EditText
             android:inputType="text"
             android:layout_width="50dp"
             android:layout_height="80dp"
-            android:text="New EditText"
             android:id="@+id/chatBar"
             android:layout_alignParentBottom="true"
             android:autoText="false"
@@ -31,40 +33,22 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="false"
             android:layout_toLeftOf="@+id/sendBtn"
-            android:background="#ffffff"/>
+            android:background="#ffffff"
+            android:layout_marginLeft="3dp"
+            android:layout_marginBottom="3dp"
+            android:layout_alignParentStart="true"/>
 
     <Button
             android:layout_width="90dp"
             android:layout_height="80dp"
-            android:text="Send"
+            android:text="@string/send"
             android:id="@+id/sendBtn"
             android:layout_alignParentRight="true"
             android:layout_alignParentLeft="false"
             android:layout_alignParentBottom="true"
             android:layout_alignParentTop="false"
-            android:background="#d2d2d2"/>
-
-    <Spinner
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tripDrp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignRight="@+id/chatText"
-            android:spinnerMode="dialog"
-            android:focusableInTouchMode="false"
-            android:prompt="Select Trip"/>
-
-    <Spinner
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/participantDrp"
-            android:layout_alignLeft="@+id/chatText"
-            android:layout_below="@+id/tripDrp"
-            android:layout_alignRight="@+id/chatText"
-            android:visibility="visible"
-            android:spinnerMode="dialog"
-            android:prompt="Select Co-Participant"
-            android:clickable="false"/>
+            android:background="#d2d2d2"
+            android:layout_marginRight="3dp"
+            android:layout_marginBottom="3dp"/>
 
 </RelativeLayout>
