--- a/TrippieApp/res/layout/usertripdetail.xml
+++ b/TrippieApp/res/layout/usertripdetail.xml
@@ -6,7 +6,7 @@
               android:layout_height="match_parent"
               android:background="#0ac5f4">
     <TextView android:id="@+id/nameLbl"
-              android:text="@string/name"
+              android:text="@string/fName"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content">
     </TextView>
